feature: se agregan los endpoint CRUD para las tablas del modelo para el informe de gestion y certificado de cumplimiento #14, tambien se factoriza las respuestas segun lineamientos #17
